# pdf-sign

./: .envrc  Cargo.toml  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  commands.rs  json.rs  main.rs  sign.rs  util.rs
crates/core/: Cargo.toml
crates/core/src/: digest.rs  lib.rs  pdf.rs  suffix.rs  types.rs
crates/gpg/: Cargo.toml
crates/gpg/src/: keybox.rs  lib.rs  sign.rs  verify.rs
crates/sigstore/: Cargo.toml
crates/sigstore/src/: lib.rs  sign.rs  verify.rs
nix/: checks.nix  demo.nix  git-hooks.nix  package.nix  shell.nix
scripts/: autocast.sh  autocast.yaml  e2e.sh
