[package]
name = "pdf-sign-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
bilrost.workspace = true
bilrost-derive.workspace = true
sha2.workspace = true
base64.workspace = true
