[package]
name = "pdf-sign-sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pdf-sign-core = { path = "../core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sigstore.workspace = true
tokio.workspace = true
base64.workspace = true
webbrowser = "1.0"
openidconnect = "4.0"
x509-cert = "0.2"
const-oid = "0.9"
sigstore_protobuf_specs = "0.5"
regex = "1.11"
